# ProjectCrossBar

./: .gitignore  Anchor.toml  CONTRIBUTING.md  Cargo.toml  MATH.md  README.md  SECURITY.md  TECHNICALDESIGN.md  package-lock.json  package.json
.github/workflows/: ci.yml
clearing/: Cargo.toml
clearing/src/: band.rs  cfmm.rs  clear.rs  curves.rs  lib.rs  prorata.rs  window.rs
clearing/tests/: auction_price.rs  cfmm.rs  dual_flow.rs  fuzz.rs  invariants.rs  order_fairness.rs  parity.rs
clients/: flash-ref.ts
clients/flash/: README.md  client.ts  copytrade.ts  lp-dashboard.ts  strategy.ts  stream.ts  triggers.ts
docs/diagrams/: README.md  account-model.drawio  architecture.drawio  clearing.drawio  dual-flow.drawio  flash-features.drawio  flash-integration.drawio  lifecycle.drawio  math-curves.drawio  oracle-parity.drawio  per-privacy.drawio  settlement.drawio
docs/integrations/: FLASH_TRADE.md  PRIVATE_PAYMENTS.md  README.md
kora/: Dockerfile  HEROKU.md  README.md  kora.toml  signers.toml
programs/crossbar/: Cargo.toml
programs/crossbar/src/: clearing_bridge.rs  err.rs  escrow.rs  lib.rs  permission.rs
programs/crossbar/src/state/: book.rs  market.rs  mod.rs  open_orders.rs  oracle.rs  result.rs
scripts/: deploy-devnet.sh  deploy-testnet.sh  redeploy-and-diag.sh  render-diagrams.sh  render-github-banner.py  run-demo-local.sh  run-private-demo-local.sh
tests/: cfmm-demo.ts  crank-demo.ts  crossbar-demo.ts  demo-devnet.ts  er-demo.ts  er-scenarios.ts  hedge-demo.ts  private-demo.ts  randclear-demo.ts  smoke-devnet.ts
tests/parity/: README.md  diff_fixtures.py  oracle_cli.ml  run_parity.sh
web/: .env.example  README.md  UI_KIT.md  index.html  package-lock.json  package.json  tsconfig.app.json  vercel.json  vite.config.ts
web/api/coingecko/: [...path].ts
web/api/pyth/: [...path].ts
web/src/: App.tsx  index.css  main.tsx  polyfills.ts
web/src/components/charts/: LivePriceChart.tsx  OracleBandChart.tsx  PriceHistoryChart.tsx  VolumeChart.tsx
web/src/components/dashboard/: BatchBookPanel.tsx  BatchResultPanel.tsx  DashboardShell.tsx  DemoScenariosPanel.tsx  FlashPanel.tsx  LiveMarketPanel.tsx  MarketConfigBar.tsx  MarketLifecyclePanel.tsx  OracleBandPanel.tsx  OrderEntryPanel.tsx  PriceTicker.tsx  ProgramFooter.tsx  RoundTripPanel.tsx  VerificationPanel.tsx
web/src/components/docs/: DocsSection.tsx  DocsSidebar.tsx
web/src/components/hero/: HeroNav.tsx  HeroSection.tsx  HeroVideo.tsx
web/src/components/landing/: CtaSection.tsx  FaqSection.tsx  FeatureGrid.tsx  FlashTradeSection.tsx  HowItWorks.tsx  InvariantsSection.tsx
web/src/components/site/: SiteFooter.tsx  SiteNav.tsx
web/src/context/: MarketContext.tsx  MarketTickerContext.tsx
web/src/hooks/: useCoinGecko.ts  useCrossbarProgram.ts  useErRoundTrip.ts  useKoraRelay.ts  useMarketPolling.ts  useMarketTicker.ts
web/src/idl/: crossbar.json
web/src/layouts/: RootLayout.tsx
web/src/lib/: coingecko.ts  constants.ts  defillama.ts  docs-content.ts  errors.ts  flash-prices.ts  format.ts  market-data.ts  pdas.ts  pyth-benchmarks.ts  pyth-hermes.ts  tx.ts
web/src/pages/: DashboardPage.tsx  DocsPage.tsx  IntegrationsPage.tsx  LandingPage.tsx  NotFoundPage.tsx  ParityPage.tsx
web/src/providers/: WalletProvider.tsx
