# Project CrossBar Anchor workspace root.
#
# The pure clearing engine lives in `clearing/` and is its OWN workspace (so its
# fast off-chain tests never drag in the Anchor/Solana tree). The on-chain
# program path-depends on it.
[workspace]
members = ["programs/*"]
# `clearing` is its own workspace (hermetic fast tests); `vendor` holds
# unrelated reference repos. Exclude both so cargo does not treat them as
# members. The program still path-depends on `clearing` across the boundary.
exclude = ["clearing", "vendor"]
resolver = "2"

[profile.release]
# Size-optimized for a smaller deployable .so (less rent / deploy SOL).
# opt-level "z" = optimize for size; fat LTO + 1 codegen unit maximize dead-code
# elimination; strip removes symbols; panic=abort drops unwinding tables (the
# SBF runtime aborts on panic anyway). overflow-checks stays ON: integer safety
# is a correctness invariant here (REQUIREMENTS.md C5), worth the few KB.
opt-level = "z"
overflow-checks = true
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
